--- a/webpack/package.json
+++ b/webpack/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "webpack serve  --port 30000 --open  --mode development",
-    "build":"webpack --mode production"
+    "dev": "webpack serve  --port 30000 --open  --mode development",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "node-sass": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
+    "purgecss-webpack-plugin": "^4.0.3",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.47.1",
